# GameOfLife

./: CMakeLists.txt  README.md  main.c  tests.c
.github/workflows/: c.yml  cmake.yml
Dox/: actions_8c.html  actions_8c__incl.dot  actions_8h.html  actions_8h__dep__incl.dot  actions_8h__incl.dot  actions_8h_source.html  dir_37c6514aeece95293041e34c0f2e0784.html  dir_9f97b40203d0b7782e2ba57c500dd0f3.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  index.html  interface_8c.html  interface_8c__incl.dot  interface_8h.html  interface_8h__dep__incl.dot  interface_8h__incl.dot  interface_8h_source.html  main_8c.html  main_8c__incl.dot  menudata.js  neigh_8c.html  neigh_8c__incl.dot  neigh_8h.html  neigh_8h__dep__incl.dot  neigh_8h__incl.dot  neigh_8h_source.html  table_8c.html  table_8c__incl.dot  table_8h.html  table_8h__dep__incl.dot  table_8h__incl.dot  table_8h_source.html  tests_8c.html  tests_8c__incl.dot
Dox/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  defines_0.js  enums_0.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
console/: CMakeLists.txt  console.c  console.h  interface.c  interface.h
docker/: Dockerfile
game/: CMakeLists.txt  actions.c  actions.h  game.c  game.h  neigh.c  neigh.h  table.c  table.h
